update all files

--- a/index.html
+++ b/index.html
@@ -3,52 +3,83 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web portfolio</title>
+    <title>web portfolio2</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section>
+        <div class="top-menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Work</a></li>
+                <li><a href="#">Protfillio</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
+    </section>
+    <section>
         <div class="half-width">
-        <h1>HELLO I'M </br><span class="orange-highlights">ROB DAVIDSON</span></h1>
-        <p>A full stack allaround designer that placera  in massa consectetur</p>
-        <a class="link-button" target="_blank" href="https://www.facebook.com/princemahmud506">Hire Me</a>
+            <h1>HELLO, I'M</h1>
+            <h2><span class="name-hight">ROB DAVIDSON</span></h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem, ex. A full stack allaround designer that placerat in massa consectetur</p>
+            <a class="button" target="-blank" href="file:///F:/webdevlopment/projects/web-prothfillio/web.html">Hire Me</a>
         </div>
         <div class="half-width">
-            <img src="images/men pic1.png" width="500">
+            <img class="image" src="images/men pic1.png" width="640">
         </div>
     </section>
 
-    <section class="dream-area">
+    <section>
         <div class="half-width">
-            <img src="images/men pic2.png" width="600">
+            <img class="image" src="images/men pic2.png" width="640">
         </div>
         <div class="half-width">
-            <h2>ABOUT</h2>
-            
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-            <a class="link-button" target="_blank" href="https://www.facebook.com/princemahmud506">Download Resume</a>
+            <h1>ABOUT</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, expedita. Neque quis excepturi, molestias suscipit quod iusto temporibus. Suscipit aut maxime accusantium aliquam nihil quo aspernatur delectus fugiat. Facilis, numquam?</p>
+            <a class="button" target="-blank" href="file:///F:/webdevlopment/projects/web-prothfillio/web.html">DOWNLOAD CV</a>
         </div>
     </section>
-    <section class="experiences-area">
-        <h2>experiences</h2>
-        <div id="full-stack" class="half-width single-experience">
-            
-            <h2>Full Stack Web Dev</h2>
-            <h3 class="orange-highlights">2021-present | pro level web Developer</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
-        </div>
-        <div id="baby-web" class="half-width single-experience">
-            <h2>Baby Web Dev</h2>
-            <h3 class="orange-highlights">2020-2021 | Programming Hero Learner</h3>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-        </div>
 
+    <section class="works">
+        <h2 class="header"><span>LASTEST</span> WORKING PROJECT</h2>
+        <div class="continer">
+            <div class="box" >
+                <img src="images/image 4.png" alt="" >
+                <h2>Power-x-gym(gym website)</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, voluptatem velit. Eum, ea quis saepe nobis </p>
+            </div>
+            <div class="box">
+                <img  src="images/image 5.png" alt="">
+                <h2 >Power-x-gym(gym website)</h2>
+                <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, voluptatem velit. Eum, ea quis saepe nobis </p>
+            </div>
+            <div class="box">
+                <img src="images/image 8.png" alt="">
+                <h2>Power-x-gym(gym website)</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, voluptatem velit. Eum, ea quis saepe nobis </p>
+            </div>
+        </div>   
     </section>
-    <footer class="footer">
-        © Prince Mahmud 2021, all rights reserved.
-    </footer>
+
+    <section>
+        <div class="image-continer">
+                <div class="icon-area">
+                <h1 class="text-over ">WORK INQUIRY</h1>
+                <a class="text-over button-icon" href="">Let's Chat</a>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="footer">
+            <h3>STAY CONNECTED</h3>
+            <h2>Hellow@design.com</h2>
+            <img class="image-icon" src="icons/image 6.png" alt="">
+            <img class="image-icon" src="icons/Group 33059.png" alt="">
+            <img class="image-icon" src="icons/image 7.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
