--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <section>
         <div class="top-menu">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Protfillio</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#" class="top-button">Home</a></li>
+                <li><a href="#" class="top-button">Work</a></li>
+                <li><a href="#" class="top-button">Protfillio</a></li>
+                <li><a href="#" class="top-button">Contact</a></li>
             </ul>
         </div>
     </section>
